--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://snkz370h727xcuxx:fusmx3vailxxgie1@ble5mmo2o5v9oouq.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xdlz8z6n1u9yazzq
-spring.datasource.username=root
-spring.datasource.password=ctcmc
+spring.datasource.url=jdbc:mysql://h590gre97vz20eki:g8u93s6pky6kha9s@z3iruaadbwo0iyfp.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/q98295r0rodgs0k7
+spring.datasource.username=h590gre97vz20eki
+spring.datasource.password=g8u93s6pky6kha9s 
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
